--- a/flexbox.html
+++ b/flexbox.html
@@ -9,6 +9,7 @@
         body{
             margin: 0;
             display: flex;
+            flex-wrap: wrap;                /* when you resizing browser maintain your items, no-wrap is default*/
             justify-content: space-between; /* Main axis */
             align-items: center;            /* Cross axis */
             height: 100vh;                  /* now items align center */
@@ -18,6 +19,9 @@
             width: 300px;
             height: 300px;
             background-color: blue;
+        }
+        .box:first-child{
+            align-self:flex-end; /* give option to child directly*/
         }
     </style>
 </head>
