--- a/grid.html
+++ b/grid.html
@@ -12,29 +12,27 @@
             /* grid container define column and row*/
             grid-gap: 5px;
             /* gap between elements*/
-            grid-auto-rows: 200px;
+            grid-auto-rows: 400px;
             /* setting undefined items grid template rows*/
             /* setting undefined items direction*/
-            grid-template-areas: "header header header""content content sidebar""content content sidebar""footer footer footer";
+            grid-template-columns: repeat(5, 1fr);
+            /* fr is fraction, automatically resizing template size*/
+            /* and repeat(how many repeat, fr) very useful */
         }
 
         .first {
-            grid-area: header;
             background-color: #f1c40f;
         }
 
         .second {
-            grid-area: sidebar;
             background-color: #27ae60;
         }
 
         .third {
-            grid-area: footer;
             background-color: #3498db;
         }
 
         .fourth {
-            grid-area: content;
             background-color: #d35400;
         }
     </style>
