--- a/grid.html
+++ b/grid.html
@@ -12,12 +12,13 @@
             /* grid container define column and row*/
             grid-gap: 5px;
             /* gap between elements*/
-            grid-auto-rows: 400px;
+            grid-auto-rows: 200px;
             /* setting undefined items grid template rows*/
             /* setting undefined items direction*/
-            grid-template-columns: repeat(5, 1fr);
+            grid-template-columns: max-content repeat(3, 1fr);
             /* fr is fraction, automatically resizing template size*/
             /* and repeat(how many repeat, fr) very useful */
+            /* mimax(minimum size, maximum size)*/
         }
 
         .first {
@@ -41,7 +42,10 @@
 <body>
 
     <div class="father">
-        <div class="first"></div>
+        <div class="first">
+            this is example of max-content max-content is define box size by content size the other is min-content
+            min-content use minimum space. so, no expand your template
+        </div>
         <div class="second"></div>
         <div class="third"></div>
         <div class="fourth"></div>
