--- a/grid.html
+++ b/grid.html
@@ -14,9 +14,10 @@
         grid-auto-rows: 100px;
         /* setting undefined items grid template rows*/
         /* setting undefined items direction*/
-        grid-template-columns: repeat(5, 100px);
+        grid-template-columns: repeat(5, 1fr);
         height: 100vh;
-        place-content: center end; /* place-content is short hand property */
+        /*justify-items and align-items are modify your item position #default is stretch your box#*/
+        /* place-content is short hand property that replace justify-content and align-content place-items is equal */
         /* fr is fraction, automatically resizing template size*/
         /* and repeat(how many repeat, fr) very useful */
         /* mimax(minimum size, maximum size)*/
@@ -28,23 +29,49 @@
         */
       }
 
+      .box:first-child {
+        grid-column: 1 / 3; /* give own feature to box  1 / 3 means start first line end third line (starting point is zero)*/
+      }
+
+      .box {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        color: white;
+      }
+
       .box:nth-child(even) {
-        background-color: aquamarine;
+        background-color: #3498db;
       }
 
       .box:nth-child(odd) {
-        background-color: blue;
+        background-color: #34495e;
       }
     </style>
   </head>
 
   <body>
     <div class="father">
-      <div class="box"></div>
-      <div class="box"></div>
-      <div class="box"></div>
-      <div class="box"></div>
-      <div class="box"></div>
+      <div class="box">1</div>
+      <div class="box">2</div>
+      <div class="box">3</div>
+      <div class="box">4</div>
+      <div class="box">5</div>
+      <div class="box">6</div>
+      <div class="box">7</div>
+      <div class="box">8</div>
+      <div class="box">9</div>
+      <div class="box">10</div>
+      <div class="box">11</div>
+      <div class="box">12</div>
+      <div class="box">13</div>
+      <div class="box">14</div>
+      <div class="box">15</div>
+      <div class="box">16</div>
+      <div class="box">17</div>
+      <div class="box">18</div>
+      <div class="box">19</div>
+      <div class="box">20</div>
     </div>
   </body>
 </html>
